--- a/htdocs/resources/assets/sass/_help.scss
+++ b/htdocs/resources/assets/sass/_help.scss
@@ -1,7 +1,7 @@
 #help
 {
   z-index: 5;
-  top: 0;
+  top: 10%;
   bottom: 0;
   width: 24%;
   position: absolute;
